2011-10-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* latex/fonts-arundina.sty, latex/ltharunsans.fd,
	  latex/ltharunmono.fd, latex/ltharunserif.fd:
	  - Add licensing header.

2011-10-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/ArundinaSansMono*.sfd:
	  - Remove old fi, fl ligatures and add non-ligated ff, fi, fl, ffi,
	    ffl glyphs to avoid ligature effects on monospace font in TeX.
	  - No 'liga' rule is added.
	  - Clear old hint tables and re-apply AutoHint, AutoInstr to all
	    glyphs.

2011-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/ArundinaSerif*.sfd:
	  - Add ff, ffi, ffl glyphs, with 'liga' rules.
	  - Clear old hint tables and re-apply AutoHint, AutoInstr to all
	    glyphs.

2011-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/ArundinaSans*.sfd:
	  - Add ff, ffi, ffl glyphs, with 'liga' rules.
	  - Clear old hint tables and re-apply AutoHint, AutoInstr to all
	    glyphs.

2011-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* scripts/gen-pfb.pe:
	  - Round to int before adding extremas, to fix some almost-horizontal
	    or almost-vertical points.

2011-10-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* scripts/gen-pfb.pe:
	  - Add spline simplification.

2011-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/Makefile.am:
	  - Use make substitutions in variables instead of shell + sed.

2011-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Remove rarely-used PFA generation

	* scripts/gen.mk.in:
	  - Remove %.pfa rule.
	* configure.ac:
	  - Remove --enable-pfa option.
	  - Remove INCLUDE_PFA and INCLUDE_TYPE1 conditions.
	* arundina/Makefile.am:
	  - Remove pfa referrals.
	  - Remove INCLUDE_PFA and INCLUDE_TYPE1 conditions.

2011-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Use Type 1 instead of TrueType for LaTeX, for better LIGKERN support.

	* scripts/gen.mk.in:
	  - Add %.afm build target.